# agent-world

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml  human.md  oasis7_viewer_live.release.example.toml  rust-toolchain.toml  skills-lock.json  systematic-application-testing-manual.md  testing-manual.md  world-rule.md  world_viewer_live.release.example.toml
crates/agent_world/: Cargo.toml
crates/agent_world/scenarios/: asteroid_fragment_bootstrap.json  asteroid_fragment_triad_region_bootstrap.json  asteroid_fragment_twin_region_bootstrap.json  dusty_bootstrap.json  dusty_triad_region_bootstrap.json  dusty_twin_region_bootstrap.json  llm_bootstrap.json  minimal.json  power_bootstrap.json  resource_bootstrap.json  triad_p2p_bootstrap.json  triad_region_bootstrap.json  twin_region_bootstrap.json  two_bases.json
crates/agent_world/src/: consensus_action_payload.rs  geometry.rs  lib.rs  models.rs  runtime.rs  simulator.rs
crates/agent_world/tests/: distributed_bootstrap.rs  distributed_consistency.rs  distributed_head_follow.rs  distributed_module_fetch.rs  distributed_multi_node.rs  distributed_observer_sync.rs  distributed_recovery.rs  module_input_cbor.rs  module_lifecycle.rs  module_release_sla_triad.rs  module_state.rs  module_store.rs  module_subscription_filters.rs  node_points_runtime_closure.rs  viewer_live_integration.rs  viewer_offline_integration.rs  wasm_executor.rs  world_init_demo.rs
crates/agent_world_builtin_wasm_modules/m1_memory_core/: Cargo.toml
crates/agent_world_builtin_wasm_modules/m1_rule_visibility/: Cargo.toml
crates/agent_world_builtin_wasm_modules/m1_sensor_basic/: Cargo.toml
crates/agent_world_builtin_wasm_modules/m4_factory_smelter_mk1/: Cargo.toml
crates/agent_world_builtin_wasm_modules/m4_product_component_motor_mk1/: Cargo.toml
crates/agent_world_builtin_wasm_modules/m4_recipe_assembler_factory_core/: Cargo.toml
crates/agent_world_builtin_wasm_modules/m4_recipe_assembler_gear/: Cargo.toml
crates/agent_world_builtin_wasm_modules/m4_recipe_assembler_logistics_drone/: Cargo.toml
crates/agent_world_builtin_wasm_modules/m4_recipe_smelter_iron_ingot/: Cargo.toml
crates/agent_world_client_launcher/: Cargo.toml  index.html
crates/agent_world_client_launcher/src/: app_process.rs  app_process_web.rs  config_ui.rs  explorer_window.rs  explorer_window_p1.rs  feedback_entry.rs  feedback_window.rs  feedback_window_web.rs  launcher_core.rs  llm_settings.rs  llm_settings_web.rs  main.rs  main_app_shell.rs  main_tests.rs  main_ui_helpers.rs  platform_ops.rs  self_guided.rs  self_guided_blocked_actions.rs  self_guided_error_cards.rs  self_guided_onboarding_reminder.rs  self_guided_preflight.rs  tests.rs  transfer_entry.rs  transfer_window.rs  transfer_window_web.rs
crates/agent_world_consensus/: Cargo.toml
crates/agent_world_consensus/src/: dht.rs  ed25519_signer_policy.rs  lease.rs  lib.rs  membership.rs  membership_dead_letter_replay_archive_tests.rs  membership_dead_letter_replay_archive_tests_split_part1.rs  membership_dead_letter_replay_archive_tests_split_part2.rs  membership_dead_letter_replay_audit_tests.rs  membership_dead_letter_replay_audit_tests_split_part1.rs  membership_dead_letter_replay_persistence_tests.rs  membership_dead_letter_replay_tests.rs  membership_logic.rs  membership_reconciliation.rs  membership_reconciliation_tests.rs  membership_recovery_tests.rs  membership_recovery_tests_split_part1.rs  membership_split_part1.rs  membership_tests.rs  mempool.rs  network.rs  node_consensus_message.rs  node_consensus_signature.rs  node_pos.rs  pos.rs  quorum.rs  sequencer_mainloop.rs  signature.rs  tiered_file_log.rs
crates/agent_world_net/: Cargo.toml
crates/agent_world_net/src/: bootstrap.rs  client.rs  dht.rs  dht_cache.rs  execution_storage.rs  gateway.rs  head_follow.rs  head_sync.rs  head_tracking.rs  head_validation.rs  index.rs  index_store.rs  lib.rs  libp2p_net.rs  network.rs  observer.rs  observer_metrics.rs  observer_replay.rs  provider_cache.rs  provider_distribution.rs  provider_selection.rs  replay_flow.rs  replica_maintenance.rs  tests.rs  util.rs
crates/agent_world_node/: Cargo.toml
crates/agent_world_node/src/: consensus_action.rs  consensus_signature.rs  execution_hook.rs  feedback_runtime.rs  gossip_udp.rs  lib.rs  lib_impl_part1.rs  lib_impl_part2.rs  libp2p_replication_network.rs  libp2p_replication_network_wasm.rs  network_bridge.rs  node_runtime_core.rs  pos_engine_gossip.rs  pos_schedule.rs  pos_state_store.rs  pos_validation.rs  replication.rs  runtime_util.rs  tests.rs  tests_action_payload.rs  tests_gossip_player.rs  tests_hardening.rs  tests_split_part1.rs  tests_split_part2.rs  tests_split_part3.rs  types.rs
crates/agent_world_viewer/: Cargo.toml  index.html  software_safe.html  software_safe.js
crates/agent_world_viewer/src/: app_bootstrap.rs  auto_degrade.rs  auto_focus.rs  button_feedback.rs  camera_controls.rs  camera_controls_tests.rs  control_labels.rs  copyable_text.rs  diagnosis.rs  egui_right_panel.rs  egui_right_panel_chat.rs  egui_right_panel_chat_auth.rs  egui_right_panel_chat_presets.rs  egui_right_panel_chat_tests.rs  egui_right_panel_controls.rs  egui_right_panel_env.rs  egui_right_panel_layout.rs  egui_right_panel_player_achievements_tests.rs  egui_right_panel_player_card_motion.rs  egui_right_panel_player_card_motion_tests.rs  egui_right_panel_player_chatter_tests.rs  egui_right_panel_player_entry.rs  egui_right_panel_player_entry_tests.rs  egui_right_panel_player_experience.rs  egui_right_panel_player_guide.rs  egui_right_panel_player_guide_progress_tests.rs  egui_right_panel_player_layout_tests.rs  egui_right_panel_player_mission_tests.rs  egui_right_panel_player_reward_tests.rs  egui_right_panel_player_stuck_tests.rs  egui_right_panel_player_summary_tests.rs  event_window.rs  (+58 more)
crates/agent_world_wasm_executor/: Cargo.toml
crates/agent_world_wasm_sdk/: Cargo.toml
crates/oasis7_consensus/: Cargo.toml
crates/oasis7_node/: Cargo.toml
crates/oasis7_viewer/: Cargo.toml  index.html  software_safe.js
(+4637 files in other folders)
