[workspace]
members = [
    "crates/agent_world",
    "crates/agent_world_builtin_wasm",
    "crates/agent_world_consensus",
    "crates/agent_world_distfs",
    "crates/agent_world_net",
    "crates/agent_world_node",
    "crates/agent_world_proto",
    "crates/agent_world_wasm_abi",
    "crates/agent_world_wasm_executor",
    "crates/agent_world_wasm_sdk",
    "crates/agent_world_wasm_router",
    "crates/agent_world_wasm_store",
    "crates/agent_world_viewer",
]
resolver = "2"

[profile.dev.package.epaint]
# On wasm32-unknown-unknown, `std::time::Instant` is unavailable.
# epaint's debug deadlock checks call `parking_lot::try_*_for`, which panics there.
debug-assertions = false
