[package]
name = "agent_world"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
agent_world_distfs = { path = "../agent_world_distfs" }
agent_world_proto = { path = "../agent_world_proto" }
agent_world_wasm_abi = { path = "../agent_world_wasm_abi" }
agent_world_wasm_executor = { path = "../agent_world_wasm_executor", default-features = false }
agent_world_wasm_router = { path = "../agent_world_wasm_router" }
agent_world_wasm_store = { path = "../agent_world_wasm_store" }
agent_world_node = { path = "../agent_world_node" }
hmac = "0.12"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
blake3 = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
toml = "0.8"
async-openai = { version = "0.32.4", default-features = false, features = ["responses", "rustls"] }
tokio = { version = "1", features = ["rt", "time"] }
tungstenite = "0.21"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = []
wasmtime = ["agent_world_wasm_executor/wasmtime"]
viewer_live_integration = []
self_tests = []
test_tier_required = []
test_tier_full = ["test_tier_required"]
