[package]
name = "agent_world"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
agent_world_proto = { path = "../agent_world_proto" }
oasis7_wasm_abi = { path = "../oasis7_wasm_abi" }
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
agent_world_distfs = { path = "../agent_world_distfs" }
agent_world_launcher_ui = { path = "../agent_world_launcher_ui" }
agent_world_node = { path = "../agent_world_node" }
agent_world_wasm_executor = { path = "../agent_world_wasm_executor", default-features = false }
agent_world_wasm_router = { path = "../agent_world_wasm_router" }
agent_world_wasm_store = { path = "../agent_world_wasm_store" }
async-openai = { version = "0.32.4", default-features = false, features = ["responses", "rustls"] }
ctrlc = { version = "3.4", features = ["termination"] }
hmac = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "time"] }
toml = "0.8"
tungstenite = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["wasmtime"]
wasmtime = ["agent_world_wasm_executor/wasmtime"]
viewer_live_integration = []
self_tests = []
test_tier_required = []
test_tier_full = ["test_tier_required"]
