[package]
name = "agent_world_client_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_world_launcher_ui = { path = "../agent_world_launcher_ui" }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
