[package]
name = "agent_world_client_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_world_launcher_ui = { path = "../agent_world_launcher_ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow"] }
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }
web-time = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
