[package]
name = "agent_world_consensus"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
agent_world = { path = "../agent_world", default-features = false }
agent_world_net = { path = "../agent_world_net", default-features = false }
agent_world_proto = { path = "../agent_world_proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
