[package]
name = "agent_world_net"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
libp2p = ["dep:libp2p", "dep:futures", "dep:async-std"]
runtime_bridge = []

[dependencies]
agent_world_proto = { path = "../agent_world_proto" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
futures = { version = "0.3", optional = true }
async-std = { version = "1", optional = true }
libp2p = { version = "0.53", optional = true, default-features = false, features = ["async-std", "cbor", "dns", "gossipsub", "kad", "macros", "noise", "request-response", "tcp", "yamux"] }
