[package]
name = "agent_world_node"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
agent_world_distfs = { path = "../agent_world_distfs" }
agent_world_proto = { path = "../agent_world_proto" }
async-std = "1"
ed25519-dalek = "2"
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.53", default-features = false, features = ["async-std", "gossipsub", "macros", "noise", "tcp", "yamux"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
