[package]
name = "agent_world_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_world = { path = "../agent_world" }
bevy = "0.18.0"
bevy_egui = "0.39.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
egui_kittest = { version = "0.33.3", features = ["snapshot"] }
egui-wgpu = { version = "0.33.3", default-features = false }
pollster = "0.4.0"
image = { version = "0.25.6", default-features = false }
