[package]
name = "agent_world_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_world = { path = "../agent_world", default-features = false }
bevy = "0.18.0"
bevy_egui = "0.39.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CloseEvent", "CompositionEvent", "Document", "Element", "ErrorEvent", "Event", "HtmlElement", "HtmlInputElement", "InputEvent", "KeyboardEvent", "Location", "MessageEvent", "Node", "UrlSearchParams", "WebSocket", "Window"] }

[dev-dependencies]
egui_kittest = { version = "0.33.3", features = ["snapshot"] }
egui-wgpu = { version = "0.33.3", default-features = false }
pollster = "0.4.0"
image = { version = "0.25.6", default-features = false }
