[package]
name = "agent_world_wasm_sdk"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
wire = ["std", "dep:serde", "dep:serde_cbor", "dep:serde_json"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_cbor = { version = "0.11", optional = true }
serde_json = { version = "1", optional = true }
