[package]
name = "oasis7_node"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
oasis7_consensus = { path = "../oasis7_consensus" }
oasis7_distfs = { path = "../oasis7_distfs" }
oasis7_proto = { path = "../oasis7_proto" }
async-std = "1"
ed25519-dalek = "2"
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.53", default-features = false, features = ["async-std", "cbor", "gossipsub", "macros", "noise", "request-response", "tcp", "yamux"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
oasis7_net = { path = "../oasis7_net", default-features = false, features = ["libp2p"] }
