[package]
name = "oasis7_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis7 = { path = "../oasis7", default-features = false }
bevy = { version = "0.18.0", default-features = false, features = ["bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_gltf", "bevy_log", "bevy_pbr", "bevy_post_process", "bevy_render", "bevy_scene", "bevy_text", "bevy_ui", "bevy_ui_render", "bevy_window", "bevy_winit", "default_font", "multi_threaded", "png", "tonemapping_luts", "wayland", "webgl2", "x11"] }
bevy_egui = "0.39.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.3"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CloseEvent", "CompositionEvent", "Document", "Element", "ErrorEvent", "Event", "HtmlElement", "HtmlInputElement", "InputEvent", "KeyboardEvent", "Location", "MessageEvent", "Node", "UrlSearchParams", "WebSocket", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toml = "0.8"

[dev-dependencies]
egui_kittest = { version = "0.33.3", features = ["snapshot"] }
egui-wgpu = { version = "0.33.3", default-features = false }
pollster = "0.4.0"
image = { version = "0.25.6", default-features = false }
ed25519-dalek = "2"
hex = "0.4"
