[workspace]

[package]
name = "agent_world_builtin_wasm_m1_rule_visibility"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
agent_world_builtin_wasm = { path = "../../agent_world_builtin_wasm" }
agent_world_wasm_sdk = { path = "../../agent_world_wasm_sdk" }
