[workspace]

[package]
name = "agent_world_builtin_wasm_m1_sensor_basic"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
agent_world_builtin_wasm_runtime = { path = "../../agent_world_builtin_wasm_runtime" }
agent_world_wasm_sdk = { path = "../../agent_world_wasm_sdk" }
