[workspace]

[package]
name = "agent_world_builtin_wasm_m4_recipe_smelter_iron_ingot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
agent_world_builtin_wasm = { path = "../../agent_world_builtin_wasm" }
agent_world_wasm_sdk = { path = "../../agent_world_wasm_sdk" }
