[workspace]

[package]
name = "oasis7_builtin_wasm_m5_gameplay_meta_progression"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oasis7_wasm_sdk = { path = "../../oasis7_wasm_sdk", features = ["wire"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
